--- a/.github/workflows/env-sink-actions.yml
+++ b/.github/workflows/env-sink-actions.yml
@@ -6,8 +6,6 @@ on:
         required: true
         type: string
 
-# This assumes that we know the name of the .env file
-# If we also need to pass the name where it's downloaded, that will be a separate input var
 # .env file parsing comes from this gist:
 # https://gist.github.com/judy2k/7656bfe3b322d669ef75364a46327836
 jobs:
@@ -16,12 +14,16 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-      - name: Download artifact
+      - name: Download env file
         uses: actions/download-artifact@v3
         with:
           name: ${{ inputs.var-file }}
+          path: sink.env
       - name: Dump Environment Variables
+        # Allow env file download to fail
+        if: success() || failure()
         run: |
+          touch sink.env
           source <(grep -v '^#' sink.env | sed -E 's|^(.+)=(.*)$|: ${\1=\2}; export \1|g')
           echo "Dumping environment variables"
           env
