--- a/.github/workflows/env-sink-actions.yml
+++ b/.github/workflows/env-sink-actions.yml
@@ -3,7 +3,7 @@ on:
   workflow_call:
     inputs:
       var-file:
-        required: true
+        required: false
         type: string
 
 # .env file parsing comes from this gist:
@@ -14,14 +14,14 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+        # Only run this step if an artifact name was given
       - name: Download env file
+        if: inputs.var-file != ''
         uses: actions/download-artifact@v3
         with:
           name: ${{ inputs.var-file }}
           path: sink.env
       - name: Dump Environment Variables
-        # Allow env file download to fail
-        if: success() || failure()
         run: |
           touch sink.env
           source <(grep -v '^#' sink.env | sed -E 's|^(.+)=(.*)$|: ${\1=\2}; export \1|g')
